# Market_Data_Processor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  moving_average_crossover.cpp  moving_average_crossover.h  moving_average_strategy.cpp  moving_average_strategy.h  strategy.h  strategy_manager.cpp  strategy_manager.h
